<resources>
    <string name="app_name">android_hw1</string>
    <string name="city_moscow">Moscow</string>
    <string name="button_moscow">Moscow</string>
    <string name="button_perm">Perm</string>
    <string name="button_petersburg">St.Petersburg</string>
    <string name="button_omsk">Omsk</string>
    <string name="weather_moscow">+15</string>
    <string name="weather_perm">+11</string>
    <string name="weather_petersburg">+14</string>
    <string name="weather_omsk">+17</string>
    <string name="wind_force_moscow">2 m/s</string>
    <string name="wind_force_perm">1 m/s</string>
    <string name="wind_force_petersburg">3 m/s</string>
    <string name="wind_force_omsk">15 m/s</string>
    <string name="wind_force">Wind force</string>
    <string name="choose_city">Choose city</string>
    <string name="select_city">Select city</string>
    <string name="settings">Settings</string>
    <string name="button_save">Save</string>



</resources>
