<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/city_text"
        android:layout_width="0dp"
        android:layout_height="205dp"
        app:layout_constraintHorizontal_weight="2"
        android:gravity="center"
        android:text="@string/city_moscow"
        android:textSize="18dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/weather_text"/>

    <TextView
        android:id="@+id/weather_text"
        android:layout_width="0dp"
        android:layout_height="205dp"
        app:layout_constraintHorizontal_weight="2"
        android:gravity="center"
        android:text="@string/weather_moscow"
        android:textSize="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/city_text"/>

    <Button
        android:id="@+id/button_Moscow"
        android:layout_width="0dp"
        android:layout_height="205dp"
        app:layout_constraintHorizontal_weight="2"
        android:gravity="center"
        android:text="@string/button_moscow"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_Perm"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button_Perm"
        android:layout_width="0dp"
        android:layout_height="205dp"
        app:layout_constraintHorizontal_weight="2"
        android:gravity="center"
        android:text="@string/button_perm"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_Moscow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/button_StPetersburg"
        android:layout_width="0dp"
        android:layout_height="205dp"
        app:layout_constraintHorizontal_weight="2"
        android:gravity="center"
        android:text="@string/button_petersburg"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_Omsk"
        app:layout_constraintTop_toBottomOf="@id/button_Moscow" />
    <Button
        android:id="@+id/button_Omsk"
        android:layout_width="0dp"
        android:layout_height="205dp"
        app:layout_constraintHorizontal_weight="2"
        android:gravity="center"
        android:text="@string/button_omsk"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/button_StPetersburg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_Perm" />

</androidx.constraintlayout.widget.ConstraintLayout>