<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainTwoActivity">

    <TextView
        android:id="@+id/sendMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_city"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <CheckBox
        android:id="@+id/windForce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind_force"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_Moscow"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/button_Moscow"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/button_moscow"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/button_StPetersburg"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_Perm" />

    <Button
        android:id="@+id/button_Perm"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/button_perm"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/button_Omsk"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/button_Moscow"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_StPetersburg"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/button_petersburg"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_Omsk" />

    <Button
        android:id="@+id/button_Omsk"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/button_omsk"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/button_StPetersburg"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>